<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CornellOutdoors</string>
    <string name="initial_question">What would you like to do?</string>
    <string name="finish">Finish</string>
    <string name="button">Next Location</string>
    <string name="action_settings">Settings</string>
    <string name="suggest">Suggest Activity</string>
    <string name="location">Activity Location</string>
    <string name="opentime">Times Open</string>
    <string name="description">Description of Activity</string>
    <string name="suggestenter">Enter</string>
    <string name="hours">When is this activity open?</string>
    <string name="name">Name of Activity</string>
    <string name="choosemore">Choose more than one!</string>
    <string name="takeme">Take Me There!</string>

</resources>
